netology/kubernetes/08/yaml/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool-08
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: nginx 
        image: nginx:latest 
        ports:
        - containerPort: 80
        volumeMounts:
        - name: api-html
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool
      volumes:
      - name: api-html
        configMap:
          name: api-html
