netology/kubernetes/08/yaml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-app
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
