netology/kubernetes/08/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: myapp
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
